tests/specs/lockfile/frozen_lockfile/frozen_new_dep_dynamic_http.out
Download http://localhost:4545/welcome.ts
error: Uncaught (in promise) TypeError: The lockfile is out of date. Run `deno cache` or rerun without the `--frozen` flag to update it.
changes:
14 | -  "remote": {}
14 | +  "remote": {
15 | +    "http://localhost:4545/welcome.ts": "[WILDCARD]"
16 | +  }
const _ = await import(scheme + "localhost:4545/welcome.ts");
          ^
    at [WILDCARD]